# core-contracts

multisig/: Cargo.toml  README.md
multisig/res/: multisig.wasm
multisig/src/: lib.rs
multisig/tests/: general.rs
