[package]
name = "multisig"
version = "0.2.0"
authors = ["Near Inc <hello@near.org>"]
edition = "2018"
publish = false

[lib]
crate-type = ["cdylib", "rlib"]

[profile.release]
codegen-units = 1
# Tell `rustc` to optimize for small code size.
opt-level = "s"
lto = true
debug = false
panic = "abort"
overflow-checks = true

[dependencies]
borsh = { version = "1.5.0", features = ["borsh-derive"] }
near-sdk = { version = "5.1.0", features = ["abi"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1.0.117"

[dev-dependencies]
lazy_static = "1.4.0"
near-sdk = { version = "5.1.0", features = ["unit-testing"] }
# # near-test = { git = "https://github.com/ilblackdragon/balancer-near" }
# near-crypto = { git = "https://github.com/nearprotocol/nearcore.git" }
# near-primitives = { git = "https://github.com/nearprotocol/nearcore.git" }
